# src/MooBank.Api/openapi-v1.json
@@ -9004,7 +9004,8 @@
       },
       "RetirementProjectionOverrides": {
         "required": [
-          "members"
+          "members",
+          "excludedMemberIds"
         ],
         "type": "object",
         "properties": {
@@ -9068,6 +9069,13 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/RetirementMemberOverride"
+            }
+          },
+          "excludedMemberIds": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
             }
           }
         }
